# Bookmark_Shelf

./: .gitignore  DESIGN.md  Makefile  README.ja.md  README.md  TEST_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checker.rs  config.rs  exporter.rs  importer.rs  lib.rs  main.rs
src-tauri/tests/: roundtrip.rs
src/__tests__/: linkChecker.test.tsx  setup.ts  useConfig.test.ts
src/hooks/: useConfig.ts
src/pages/: Home.tsx  LinkChecker.tsx  Settings.tsx  TreeView.tsx
