[package]
name = "bookmark-shelf"
version = "0.1.0"
description = "BookmarkShelf - Manage bookmarks as a directory structure"
authors = []
edition = "2021"

[lib]
name = "bookmark_shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.23"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
url = "2"
toml = "0.8"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
